# speedtest

./: .gitignore  Makefile  README.md
cli/: Cargo.toml  pyproject.toml
cli/speedtest-cli/: __main__.py
cli/src/: commands.rs  main.rs
core/: Cargo.toml  pyproject.toml
core/src/: download.rs  latency.rs  lib.rs  upload.rs
server/: Cargo.toml
server/src/: main.rs
web/: package-lock.json  package.json  tsconfig.json
