[tool.poetry]
name = "speedtest-cli"          # Package name on PyPI or poetry
version = "0.1.0"
description = "Python CLI for the Rust speedtest core"
authors = ["Bram Comyn <comyn.bram@gmail.com>"]
packages = [{ include = "speedtest_cli" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
speedtest-core = { path = "../core" }

[tool.poetry.scripts]
speedtest-cli = "speedtest_cli.__main__:cli"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
